--- a/readme.html
+++ b/readme.html
@@ -35,7 +35,7 @@
 <h3>Using the Automatic Updater</h3>
 <ol>
 	<li>Open <span class="file"><a href="wp-admin/update-core.php">wp-admin/update-core.php</a></span> in your browser and follow the instructions.</li>
-	<li>You wanted more, perhaps? That&#8217;s it!</li>
+	<li>You wanted more, perhaps yeah? That&#8217;s it!</li>
 </ol>
 
 <h3>Updating Manually</h3>
